https://www.elastic.co/guide/en/apm/agent/java/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.27.0]]
==== 1.27.0 - YYYY/MM/DD

[float]
===== Features
* Improved capturing of logged exceptions when using Log4j2 {pull}2139[#2139]

[float]
===== Bug fixes

[float]
===== Refactorings
* Loading the agent from an isolated class loader {pull}2109[#2109]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.26.0]]
==== 1.26.0 - 2021/09/14

===== Potentially breaking changes
* If you rely on Database span subtype and use Microsoft SQL Server, the span subtype has been changed from `sqlserver`
to `mssql` to align with other agents.

[float]
===== Breaking changes
* Stop collecting the field `http.request.socket.encrypted` in http requests - {pull}2136[#2136]

[float]
===== Features
* Improved naming for Spring controllers - {pull}1906[#1906]
* ECS log reformatting improvements - {pull}1910[#1910]
** Automatically sets `service.node.name` in all log events if set through agent configuration
** Add `log_ecs_reformatting_additional_fields` option to support arbitrary fields in logs
** Automatically serialize markers as tags where relevant (log4j2 and logback)
* gRPC spans (client and server) can detect errors or cancellation through custom listeners - {pull}2067[#2067]
* Add `-download-agent-version` to the agent <<setup-attach-cli-usage-options, attach CLI tool options>>, allowing the
user to configure an arbitrary agent version that will be downloaded from maven and attached - {pull}1959[#1959]
* Add extra check to detect improper agent setup - {pull}2076[#2076]

[float]
===== Performance improvements
* Reduce GC time overhead caused by WeakReferences - {pull}2086[#2086], {pull}2081[#2081]