@@ -152,10 +152,18 @@ public abstract class AbstractServletContainerIntegrationTest {
         }
         this.expectedDefaultServiceName = expectedDefaultServiceName;
         this.containerName = containerName;
+
+        List<String> ignoreUrls = new ArrayList<>();
+        for (TestApp app : getTestApps()) {
+            ignoreUrls.add(String.format("/%s/status*", app.getDeploymentContext()));
+        }
+        ignoreUrls.add("/favicon.ico");
+        String ignoreUrlConfig = String.join(",", ignoreUrls);
+
         servletContainer
             .withNetwork(Network.SHARED)
             .withEnv("ELASTIC_APM_SERVER_URL", "http://apm-server:1080")
-            .withEnv("ELASTIC_APM_IGNORE_URLS", "/status*,/favicon.ico")
+            .withEnv("ELASTIC_APM_IGNORE_URLS", ignoreUrlConfig)
             .withEnv("ELASTIC_APM_REPORT_SYNC", "true")
             .withEnv("ELASTIC_APM_LOG_LEVEL", "DEBUG")
             .withEnv("ELASTIC_APM_METRICS_INTERVAL", "1s")
