@@ -24,6 +24,17 @@ endif::[]
 ==== 1.27.0 - YYYY/MM/DD
 
 [float]
+===== Potentially breaking changes
+* `transaction_ignore_urls` now relies on full request URL path - {pull}2146[#2146]
+** On a typical application server like Tomcat, deploying an `app.war` application to the non-ROOT context makes it accessible with `http://localhost:8080/app/`
+** Ignoring the whole webapp through `/app/*` was not possible until now.
+** Existing configuration may need to be updated to include the deployment context, thus for example `/static/*.js` used to
+exclude known static files in all applications might be changed to `/app/static/*.js` or `*/static/*.js`.
+** It only impacts prefix patterns due to the additional context path in pattern.
+** It does not impact deployment within the `ROOT` context like Spring-boot which do not have such context path prefix.
+
+
+[float]
 ===== Features
 * Improved capturing of logged exceptions when using Log4j2 {pull}2139[#2139]
 
